Fixed side-scrolling behavior on mobile

--- a/styles.css
+++ b/styles.css
@@ -597,8 +597,8 @@ ul li p img {
 
 #background-pic {
   position: absolute;
-  bottom: 12%;
-  left: 12%;
+  bottom: 10%;
+  left: 10%;
   z-index: -1;
   filter: grayscale(1.5);
 }
@@ -645,7 +645,7 @@ ul li p img {
     transform: scale(1.1);
   }
   .contact-list ul li:hover {
-    transform: scale(1.1)
+    transform: scale(1.05);
   }
 }
 
